<resources>
    <string name="app_name">ITCC</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="home_page">Home</string>
    <string name="training_course">Training Course</string>
    <string name="consultants">Consultants</string>
    <string name="news">News</string>
    <string name="gallery">Gallery</string>
    <string name="clients">Clients</string>
    <string name="brochure">Brochure</string>
    <string name="about_us">About Us</string>
    <string name="contact_info">Contact Information</string>
    <string name="send_message">Send Messega</string>
    <string name="name_course">Name</string>
    <string name="category_text">Category</string>
    <string name="location_text">Location</string>
    <string name="language_text">Language</string>
    <string name="mounth_text">Month of</string>
    <string name="course_spinner">@android:string/VideoView_error_text_invalid_progressive_playback</string>
    <string name="search_in_courses">Search in courses</string>
    <string name="search">Search</string>
</resources>
